--- a/javascript/src/main/webapp/02.javascript_variable.html
+++ b/javascript/src/main/webapp/02.javascript_variable.html
@@ -21,9 +21,22 @@
 	전역에 선언된 let변수는 중복선언되면 에러발생안함
 	*/
 	
+	const e='상수1';
+	const f=789;
+	//e='상수1 변경';	--> TypeError: Assignment to constant variable.
 	
+	console.log(a1);
+	console.log(a2);
+	console.log(b);
+	console.log(c);
+	console.log(d);
+	console.log(e);
+	console.log(f);
 	
-	
+	let g=null;
+	let h;
+	console.log(g);
+	console.log(h);
 
 	
 	/*********Object************/
@@ -32,32 +45,77 @@
 			1. 생성자함수
 			2. JSON(JavasScript Object Notation) {,},[,]
 	*/
-	
+	let o1=new Object();	//Object() 생성자가 아니라 생성자 function
+	let o2={};				//JSON
+	console.log(o1.toString());
+	console.log(o2.toString());
 	/*********Array************/
 	/*
 		 Array 객체생성
 			1. 생성자함수
-			2. JSON(JavasScript Object Notation)
+			2. JSON(JavasScript Object Notation) : 자바스크립트 객체 표기법
 	*/
-	
+	let array1=new Array();
+	let array2=[];
+	console.log(array1.length);
+	console.log(array2.length);
 	/*****JSON을 사용한 객체(Object,Array)생성*******/
-	
-	
-	
+	let nameArray=["KIM","JUNG","PARK","KANG","CHOI"];
+	let scoreArray=[55,88,99,44,66];
+	let student={
+		"no":1,				//"속성이름":값
+		"name":"KIM"
+	};
+	console.log(student);
+	console.log(student.no);
+	console.log(student.name);
+	let studentArray=[
+		{"no":1,			
+		 "name":"KIM"},
+		{"no":2,				
+		 "name":"JUNG"}
+	];
+
 	/*
-		var :자바스트립트변수범위는 함수블록에의해서만 생성된다
 		let :자바스트립트변수범위는 블록에의해서 생성된다.
 	*/
+	for(let i=0;i<nameArray.length;i++){
+		console.log(nameArray[i]+"-->"+scoreArray[i]);
+	}
+	for(let i=0;i<studentArray.length;i++){
+		console.log(studentArray[i].no+"-->"+studentArray[i].name);
+	}
 	
-	console.log('--------------undefined----------------')
-	
+	console.log('--------------undefined----------------');
+	if(h==undefined){
+		console.log("1. h는 undifined 입니다.");
+	}
+	if(typeof h =='undefined'){
+		console.log("2. h는 undifined 입니다.");
+	}
 	console.log('--------------null----------------');
-	
-	console.log("-------------- var 로선언된변수 재선언 ------------");
+	if(g==null){
+		console.log("3. g는 null 입니다.");
+	}
+	console.log('--------------type of----------------');
+	console.log(typeof a1);
+	console.log(typeof a2);
+	console.log(typeof b);
+	console.log(typeof c);
+	console.log(typeof d);
+	console.log(typeof e);
+	console.log(typeof f);
+	console.log(typeof g);	//null은 object 타입으로 나온다.
+	console.log(typeof h);	//undefined도 타입이다.
+	console.log(typeof o1);
+	console.log(typeof o2);
+	console.log(typeof array1);	//array는 object 타입이다.
+	console.log(typeof array2);
 	
 	console.log("-------------- let 로선언된변수 재선언 ------------");
-	
+	//let a1=1213;		--> Identifier 'a1' has already been declared
 	console.log("-------------- const 로선언된변수 재선언 ------------");
+	//let e=false;		--> Identifier 'e' has already been declared
 	
 </script>
 </head>
