--- a/javascript/src/main/webapp/04.javascript_function1.html
+++ b/javascript/src/main/webapp/04.javascript_function1.html
@@ -110,6 +110,9 @@
 	func5(function(){
 		document.write("func5에 인자로 대입한 익명함수 실행<br>");
 	});
+	func5(()=>{
+		document.write("func5에 인자로 대입한 익명함수(arrow함수) 실행<br>");
+	});
 	
 	/*
 	B. 익명함수호출
