--- a/javascript/src/main/webapp/05.javascript_function2.html
+++ b/javascript/src/main/webapp/05.javascript_function2.html
@@ -30,9 +30,19 @@
     	funcArg2();
     }
     
-    /***********kQuery.js************
-    
-     */
+    /***********kQuery.js************/
+    function hello(name,funcArg){
+    	document.write(">>>> kQuery --> hello(name,funcArg) 실행<br>");
+    	let msg= name+"님 안녕하세요<br>";
+    	funcArg(msg);
+    }
+    /*
+    function forEach(array,userCallBackFunction){
+    	for(let i=0;i<array.length;i++){
+    		userCallBackFunction(i,array[i]);
+    	}
+    }
+    */
 </script>
 </head>
 <body>
@@ -45,17 +55,39 @@
 	 */
 	document.write('---------------1.함수를인자로대입--------------------------------<br>');
 	func3(arg_func1);
-	document.write('---------------2.익명함수대입된 함수형변수 대입------------------<br>');
-	
-	
-	
-	document.write('---------------3.익명함수대입------------------------------------<br>');
-	
-	
+	func4(arg_func1,arg_func2);
+	document.write('---------------2.익명함수대입------------------------------------<br>');
+	func3(function(){
+		document.write("##### func3(funcArg)에 인자로 대입한 익명함수<br>");
+	});
+	func4(function(){
+		document.write("##### func4(funcArg1,funcArg2)에 첫번째 인자로 대입한 익명함수 <br>");
+	},function(){
+		document.write("##### func4(funcArg1,funcArg2)에 두번째 인자로 대입한 익명함수 <br>");
+	});
 
 	document.write('---------------kQuery에서 제공하는 function사용----------------<br>');
-	
-	
+	hello("김경호",function(msg){
+		document.write("### 인자로 대입한 익명함수 실행<br>");
+		document.write("### hello function에서 익명함수 실행시 대입한 인자 msg: "+msg+"<br>");
+	});
+
+	/*
+    function forEach(array,userCallBackFunction){
+    	for(let i=0;i<array.length;i++){
+    		userCallBackFunction(i,array[i]);
+    	}
+    }
+    */
+	let nameArray=['김경미','김경양','김경우','김경수','김경다'];
+	forEach(nameArray,function(i,name){
+		document.write("### i="+i+":"+name+"<br>");
+	});
+	let tot=0;
+	forEach([1,2,3,4,5],function(i,number){
+		tot+=number;
+	});
+		console.log('tot:'+tot);
     </script>
 </body>
 </html>
