--- a/javascript/src/main/webapp/05.javascript_function2.html
+++ b/javascript/src/main/webapp/05.javascript_function2.html
@@ -71,6 +71,10 @@
 		document.write("### 인자로 대입한 익명함수 실행<br>");
 		document.write("### hello function에서 익명함수 실행시 대입한 인자 msg: "+msg+"<br>");
 	});
+	hello("김경호",msg=>{
+		document.write("### 인자로 대입한 arrow함수 실행<br>");
+		document.write("### hello function에서 익명함수 실행시 대입한 인자 msg: "+msg+"<br>");
+	});
 
 	/*
     function forEach(array,userCallBackFunction){
@@ -82,6 +86,9 @@
 	let nameArray=['김경미','김경양','김경우','김경수','김경다'];
 	forEach(nameArray,function(i,name){
 		document.write("### i="+i+":"+name+"<br>");
+	});
+	forEach(nameArray,(i,name)=>{
+		document.write("### i="+i+":"+name+"[arrow함수]<br>");
 	});
 	let tot=0;
 	forEach([1,2,3,4,5],function(i,number){
