--- a/javascript/src/main/webapp/04.javascript_function1.html
+++ b/javascript/src/main/webapp/04.javascript_function1.html
@@ -77,10 +77,10 @@
 					document.write("func7Var변수에 대입된 익명함수["+arg1+","+arg2+"] 실행<br>");
 				 };
 	/*
+	//즉시실행함수:선언과 동시에 호출 가능_기본생성자같이 생성과 동시에 호출 & 외부에서 호출은 불가능
 	(function(){
 		document.write("익명함수실행<br>");
-	})();
-	//선언과 동시에 호출 가능_기본생성자같이 생성과 동시에 호출 & 외부에서 호출은 불가능
+	}());
 	*/
 	
 </script>
