--- a/javascript/src/main/webapp/10.javascript_object4.html
+++ b/javascript/src/main/webapp/10.javascript_object4.html
@@ -7,14 +7,46 @@
 	/*
 	생성자함수
 	*/
+	const o=new Object();
+	const stirngObject=new String("문자열");
+	const numberObject1=new Number(34);
+	const numberObject2=Number("56");
+	const dateObject=new Date();
+	const arrayObject=new Array();
 	
 	
 	/*
 	학생객체를 생성해서 반환해주는 <<< 생성자함수 >>> 작성
 	*/
-	
+	function Student(id,name,kor,eng,math){
+		/*
+		호출 new Student('xxx','KIM',34,23,67)
+			1. Object 객체 생성({}, new Object())
+			2. 생성된 Object객체(this)에 속성 추가
+			3. 생성된 Object 객체 반환
+		*/
+		this.id=id;
+		this.name=name;
+		this.kor=kor;
+		this.eng=eng;
+		this.math=math;
+		this.tot=0;
+		this.avg=0.0;
+		this.calculateTot=function(){
+			this.tot=this.kor+this.eng+this.math;
+		}
+		this.calculateAvg=function(){
+			this.avg=this.tot/3;
+		}
+		this.toString=function(){
+			return "["+this.id+"]"+this.name+","+this.kor+","+this.eng+","+this.math+","+this.tot+","+this.avg;
+		}
+	}
 	/****************학생객체****************/
-	
+	const studentObject1=new Student('xxx','KIM',34,23,67);		//생성자 함수는 대부분 대문자로 시작한다. -> new 붙여서 호출하는 function
+	const studentObject2=new Student('yyy','LIM',26,68,98);
+	const studentObject3=new Student('zzz','MIM',11,22,63);
+	const studentArray=[studentObject1,studentObject2,studentObject3];
 
 </script>
 </head>
@@ -22,7 +54,11 @@
 <h1>생성자 함수3</h1><hr>
 <script type="text/javascript">
 	document.write('--------------student 리스트---------------------<br>');
-	
+	for(let i=0;i<studentArray.length;i++){
+		studentArray[i].calculateTot();
+		studentArray[i].calculateAvg();
+		document.write(studentArray[i].toString()+"<br>");
+	}
 </script>
 </body>
 </html>
