--- a/javascript/src/main/webapp/14,javascript_html_dom2.html
+++ b/javascript/src/main/webapp/14,javascript_html_dom2.html
@@ -40,14 +40,32 @@
 		parentDivE.removeChild(removeDivE);
 		count--;
 	}
-	
+	let imageNo=1;
 	function update() {
-	   if(count==0) return;
 	   /*
 	   let bodyNodeList=document.getElementsByTagName('body');
 	   let bodyE=bodyNodeList[0];
 	   */
 	   let bodyE=document.body;
+	   bodyE.style.backgroundImage="url('penguin"+imageNo+".gif')";
+	   bodyE.style.backgroundRepeatX='no-repeat';
+	   bodyE.style.backgroundRepeatY='no-repeat';
+	   //bodyE.style.backgroundSize='cover';
+	   imageNo++;
+	   imageNo=imageNo%3+1;
+
+	   /*
+	   let bodyNodeList = document.getElementsByTagName('body');
+	   let bodyE = bodyNodeList[0];
+	   */
+	   let bodyE=document.body;
+	   bodyE.style.backgroundImage="url('penguin"+imageNo+".gif')";
+	   bodyE.style.backgroundRepeatX='no-repeat';
+	   bodyE.style.backgroundRepeatY='no-repeat';
+	   //bodyE.style.backgroundSize='cover';
+	   imageNo++;
+	   imageNo=imageNo%3+1;
+	   
 	}
 </script>
 </head>
