--- a/javascript/src/main/webapp/16.javascript_event_bubbling.html
+++ b/javascript/src/main/webapp/16.javascript_event_bubbling.html
@@ -12,8 +12,8 @@
 <script type="text/javascript">
 	function eventStopPropagation(e){
 		alert('p');
-		//이벤트버블링중지
-		
+		//이벤트 버블링 전파 중지
+		e.stopPropagation();
 	} 
 </script>
 </head>
