--- a/javascript_ajax/WebContent/suggest.html
+++ b/javascript_ajax/WebContent/suggest.html
@@ -4,11 +4,75 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Insert title here</title>
 <style type="text/css">
-	
+	a{
+		text-decoration: none;
+		cursor: pointer;
+		display: block;
+	}
+	a:hover{
+		background: lavender;
+	}
+	#suggest{
+		position: absolute;
+		left: 80px;
+		top: 118px;
+		width: 150px;
+		display: block;
+	}
 </style>
-
+<script type="text/javascript" src="ajaxRequest.js"></script>
 <script type="text/javascript">
+	function sendKeyword(){
+		let keyword=document.search.keyword.value;
+		
+		if(keyword==null || keyword.trim()==''){
+			showSuggestDiv(false);
+			return;
+		}
+		ajaxRequest('GET','suggest.jsp','keyword='+keyword,responseKeyword);
+	}
+	function responseKeyword(xhr){
+		
+		let jsonObject=JSON.parse(xhr.responseText);
+		if(jsonObject.count==0){
+			showSuggestDiv(false);
+			return;
+		}
+		let keywordArray=jsonObject.data;
+		let html="";
+		for(let i=0;i<keywordArray.length;i++){
+			html+="<a href=\"javascript:select();\">"+keywordArray[i]+"</a>"
+		}
+		document.getElementById('suggestList').innerHTML=html;
+		showSuggestDiv(true);
+	}
+	function showSuggestDiv(show){
+		if(show){
+			document.getElementById('suggest').style.display='block';
+		} else{
+			document.getElementById('suggest').style.display='none';
+			
+		}
+	}
+	function select(){
+		alert('select()');
+	}
 	
+	window.onload=function(){
+		showSuggetDiv(false);
+		
+		document.search.keyword.addEventListener('focusout',function(){
+			//0.2초 후에 showSuggestDiv
+			setTimeout(function(){
+				showSuggestDiv(false);				
+			},200);
+		});
+		
+		document.search.keyword.addEventListener('focusin',function(){
+			sendKeyword();
+		});
+		
+	}
 </script>
 </head>
 <body>
@@ -16,11 +80,15 @@
 <hr/>
 <form action="server_search.jsp" name="search">
 	<img src="http://sstatic.naver.net/search/2015/h_logo.png" height="12px" align="bottom">
-	<input 	type="text" name="keyword" > &nbsp;
+	<input 	type="text" name="keyword" onkeyup="sendKeyword();" > &nbsp;
 	<input type="submit" value="검색">
 	<div id="suggest" class="suggest">
 		<div id="suggestList">
-				
+		<!--
+			<a href="">자바라</a>
+			<a href="">자바바</a>
+			<a href="">자바</a>
+		-->
 		</div>
 	</div>
 </form>
