--- a/javascript_ajax/WebContent/04.server_clock.html
+++ b/javascript_ajax/WebContent/04.server_clock.html
@@ -4,18 +4,29 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 
+<script type="text/javascript" src="ajaxRequest.js"></script>
 <script type="text/javascript">
 	function requestServerTime(){
-	 
+		/*
+	 	let xhr=new XMLHttpRequest();
+	 	xhr.open('GET','04.server_clock.jsp');
+	 	xhr.onload=function(){
+	 		document.getElementById('serverTimeSpan').innerHTML=xhr.responseText;
+	 	};
+	 	xhr.send(null);
+	 	*/
+	 	ajaxRequest('GET','04.server_clock.jsp',null,function(xhr){
+	 		document.getElementById('serverTimeSpan').innerHTML=xhr.responseText;
+			console.log(">>>>>>"+xhr);
+	 	});
 	}
-	function responseServerTime(){
-		
-	}
+	
 	window.onload=function(){
 		/*
 		1초마다 한번씩 requestServerTime함수실행
 		*/
-	  
+		requestServerTime();	//수업땐 따로 안적음
+	  	window.setInterval(requestServerTime,1000);
 	};
 	
 </script>
