--- a/javascript/src/main/webapp/92.javascript_cssSelector.html
+++ b/javascript/src/main/webapp/92.javascript_cssSelector.html
@@ -29,15 +29,19 @@
 		/*
 		 1.id selector(#)
 		*/
-		
+		document.querySelector('#title').innerHTML='안녕 querySelector!!';
 		/*
 		2.class selector(.)
 		*/
-		
+		document.querySelector('.contents').innerHTML+='변경';
 		/*
 		3. tag selector
 		*/
+		let h2ElementArray=document.querySelectorAll('h2');
 		
+		for(let i=0;i<h2ElementArray;i++){
+			h2ElementArray[i];
+		}
 		
 	</script>
 </body>
