--- a/javascript/src/main/webapp/93.javascript_cssSelector.html
+++ b/javascript/src/main/webapp/93.javascript_cssSelector.html
@@ -37,9 +37,16 @@ div.myClass{
 	
 	<script type="text/javascript">
 		/*********(,or)  #content or div**********/
+		let nodeList1=document.querySelectorAll('#content,div');
+		for(let i=0;i<nodeList1.length;i++){
+			nodeList1[i].style.border='1px solid blue';
+		}
 		
 		/*********class가 myClass인 모든 엘레멘트*****/
-		
+		let nodeList2=document.querySelectorAll('.myClass');
+		for(let i=0;i<nodeList2.length;i++){
+			nodeList2[i].style.color='green';
+		}
 		/*********div 엘레멘트중에서 class가 myClass인 모든 엘레멘트*****/
 		
 		/*********id가 content인 엘레멘트*****/
