--- a/guest_javascript_ajax/WebContent/guest.html
+++ b/guest_javascript_ajax/WebContent/guest.html
@@ -238,39 +238,39 @@
 								</tr>
 							</tbody>
 						</table> <!-- guest write Form  -->
+						
 						<form id="guest_write_form" name="f" method="post">
 							<table border="0" cellpadding="0" cellspacing="1" width="590"
 								bgcolor="BBBBBB">
 								<tbody>
 									<tr>
 										<td width="100" align="center" bgcolor="E6ECDE" height="22">이름</td>
-										<td width="490" align="left" bgcolor="ffffff"
-											style="padding-left: 10px"><input type="text"
-											style="width: 150" name="guest_name"></td>
+										<td width="490" align="left" bgcolor="ffffff" style="padding-left: 10px">
+										<input type="text" style="width: 150" name="guest_name" ></td>
 									</tr>
 									<tr>
 										<td width="100" align="center" bgcolor="E6ECDE" height="22">이메일</td>
 										<td width="490" align="left" bgcolor="ffffff"
 											style="padding-left: 10px"><input type="text"
-											style="width: 150" name="guest_email"></td>
+											style="width: 150" name="guest_email" ></td>
 									</tr>
 									<tr>
 										<td width="100" align="center" bgcolor="E6ECDE" height="22">홈페이지</td>
 										<td width="490" align="left" bgcolor="ffffff"
 											style="padding-left: 10px"><input type="text"
-											style="width: 150" name="guest_homepage"></td>
+											style="width: 150" name="guest_homepage" ></td>
 									</tr>
 									<tr>
 										<td width="100" align="center" bgcolor="E6ECDE" height="22">타이틀</td>
 										<td width="490" align="left" bgcolor="ffffff"
 											style="padding-left: 10px"><input type="text"
-											style="width: 240" name="guest_title"></td>
+											style="width: 240" name="guest_title" ></td>
 									</tr>
 									<tr>
 										<td width="100" align="center" bgcolor="E6ECDE" height="22">내용</td>
 										<td width="490" align="left" bgcolor="ffffff"
 											style="padding-left: 10px"><textarea wrap="soft"
-												style="width: 240px" rows="10" name="guest_content"></textarea>
+												style="width: 240px" rows="10" name="guest_content" ></textarea>
 										</td>
 									</tr>
 								</tbody>
@@ -280,9 +280,10 @@
 							<tbody>
 								<tr>
 									<td align="center"><input type="button" value="방명록쓰기" id="btn_guest_write_action"> &nbsp; 
-									<input type="button" id="btn_guest_list_btn" value="방명록목록"></td>
+									<input type="button" id="btn_guest_list" value="방명록목록"></td>
 								</tr>
 							</tbody>
+						
 						</table>
 					</td>
 				</tr>
@@ -304,45 +305,46 @@
 						</tr>
 					</tbody>
 				</table> <!-- modify Form  -->
+				{{#data}}
 				<form name="f" method="post">
-					<input type="hidden" name="guest_no" value="3">
+					<input type="hidden" name="guest_no" value="{{guest_no}}">
 					<table border="0" cellpadding="0" cellspacing="1" width="590"
 						bgcolor="BBBBBB">
 						<tbody>
 							<tr>
 								<td width="100" align="center" bgcolor="E6ECDE" height="22">번호</td>
 								<td align="left" width="490" bgcolor="ffffff"
-									style="padding-left: 10px">3</td>
+									style="padding-left: 10px">{{guest_no}}</td>
 							</tr>
 							<tr>
 								<td width="100" align="center" bgcolor="E6ECDE" height="22">이름</td>
 								<td align="left" width="490" bgcolor="ffffff"
 									style="padding-left: 10px"><input type="text"
-									style="width: 150" name="guest_name" value="김경호3333"></td>
+									style="width: 150" name="guest_name" value="{{guest_name}}"></td>
 							</tr>
 							<tr>
 								<td width="100" align="center" bgcolor="E6ECDE" height="22">홈페이지</td>
 								<td align="left" width="490" bgcolor="ffffff"
 									style="padding-left: 10px"><input type="text"
-									style="width: 150" name="guest_homepage" value="http://"></td>
+									style="width: 150" name="guest_homepage" value="{{guest_homepage}}"></td>
 							</tr>
 							<tr>
 								<td width="100" align="center" bgcolor="E6ECDE" height="22">이메일</td>
 								<td align="left" width="490" bgcolor="ffffff"
 									style="padding-left: 10px"><input type="text"
-									style="width: 240" name="guest_email" value="guard3@naver.com"></td>
+									style="width: 240" name="guest_email" value="{{guest_email}}"></td>
 							</tr>
 							<tr>
 								<td width="100" align="center" bgcolor="E6ECDE" height="22">제목</td>
 								<td align="left" width="490" bgcolor="ffffff"
 									style="padding-left: 10px"><input type="text"
-									style="width: 240" name="guest_title" value="방명록 사용법 [수정]gfhf"></td>
+									style="width: 240" name="guest_title" value="{{guest_title}}"></td>
 							</tr>
 							<tr>
 								<td width="100" align="center" bgcolor="E6ECDE" height="22">내용</td>
 								<td align="left" width="490" bgcolor="ffffff"
 									style="padding-left: 10px"><textarea wrap="soft"
-										style="width: 240px" rows="10" name="guest_content">방명록처럼 사용하시면 됩니다람쥐~~~</textarea>
+										style="width: 240px" rows="10" name="guest_content">{{guest_content}}</textarea>
 
 								</td>
 							</tr>
@@ -358,6 +360,7 @@
 							</tr>
 						</tbody>
 					</table></td>
+				{{/data}}
 			</tr>
 		</tbody>
 	</table>
