--- a/guest_javascript_ajax/WebContent/guest.html
+++ b/guest_javascript_ajax/WebContent/guest.html
@@ -55,7 +55,7 @@
 <script type="text/javascript">
 </script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
-<script src="js/app.js" type="module"></script>
+<script src="js/app.js" type="module"></script>		<!-- module은 defer 속성이 내장되어있다. -->
 </head>
 
 <body bgcolor=#FFFFFF text=#000000 leftmargin=0 topmargin=0
@@ -157,7 +157,7 @@
 				<table border="0" cellpadding="0" cellspacing="1" width="590">
 					<tbody>
 						<tr>
-							<td align="right"><input type="button" id="btn_guest_write_form" value="방명록 쓰기"></td>
+							<td align="right"><input type="button" id="btn_guest_write_form" value="방명록 쓰기폼"></td>
 						</tr>
 					</tbody>
 				</table></td>
@@ -198,7 +198,7 @@
 									</tr>
 									<tr>
 										<td width="100" align="center" bgcolor="E6ECDE" height="22">제목</td>
-										<td width="490" bgcolor="ffffff" align="left" style="padding-left: 10px">{{gueat_title}}</td>
+										<td width="490" bgcolor="ffffff" align="left" style="padding-left: 10px">{{guest_title}}</td>
 									</tr>
 									<tr>
 										<td width="100" align="center" bgcolor="E6ECDE" height="110">내용</td>
