--- a/jquery/WebContent/00.factory_function.html
+++ b/jquery/WebContent/00.factory_function.html
@@ -35,6 +35,18 @@
 		$('h4').text('끝내줘라').css('color','red').css('border','5px dotted yellow');
 		$('h5').css('color','green').text('오늘은 월요일입니다.');
 		$('h6').css('color','red').css('background','silver');
+		
+		let nameArray=['kim','nim','park'];
+		$.each(nameArray,function(i,element){
+			console.log(i+" --> "+element);
+		});
+		
+		let h3Element=document.querySelector('h3');
+		let h3JQueryObject=$(h3Element);
+		console.log("h3Element 표준객체: "+h3Element);
+		console.log("h3JQueryObject jQuery객체: "+h3JQueryObject);
+		//h3Element.text('jQuery객체 아님')(X);
+		h3JQueryObject.text('>>>>>>>>>>>>>>>>>>>>>>jQuery객체');
 	    
 	});
 	
