--- a/jquery/WebContent/1.selector/01_cssSelector.html
+++ b/jquery/WebContent/1.selector/01_cssSelector.html
@@ -21,7 +21,12 @@
 			CSS 선택자를 이용한 HTML Element 검색3
 		</div>
 		<script type="text/javascript">
-			
+			$('div').css('border','4px solid rgba(0,0,125,0.2)');	//setter
+			$('div').css('background','green');
+			$('div').css('color','white');
+			let colorStr=$('div').css('color');
+			console.log('color String: '+colorStr);
+			console.log('background Sring: '+$('div').css('background'));	//getter	
 		</script>
 	</body>
 </html>
