--- a/jquery/WebContent/1.selector/02_cssSelector.html
+++ b/jquery/WebContent/1.selector/02_cssSelector.html
@@ -6,8 +6,17 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript">
 	$(function(){
+		let h2Text=$('h2').text();
+		$('#title').html(h2Text);
+		$('.contents').html('<u>jQuery는 오픈소스입니다.</u>');
+		$('h2').text("<span>CSS 선택자</span>");
 		
-		
+		$('h2').text(function(i,oldTextValue){
+			if(i%2==0){
+				return "h2 변경";
+			}
+			return oldTextValue;
+		});
 	});
 </script>
 </head>
