--- a/jquery/WebContent/1.selector/05_arrayHandling.html
+++ b/jquery/WebContent/1.selector/05_arrayHandling.html
@@ -14,8 +14,13 @@
 				{'id':'guard4','name':'kim4','address':'경기파'},
 				{'id':'guard5','name':'kim5','address':'경기솔'}
 		];
-		
-		
+		$('h2').append(memberNameArray.length+'명');
+		$.each(memberNameArray,function(i,name){
+			$('#memberNameList').append('<li>'+name+'</li>');
+		});
+		$.each(memberArray,function(i,member){
+			$('#memberList').append(`<li>${member.id},${member.name},${member.address}</li>`);
+		});
 	});
 </script>
 </head>
