--- a/jquery/WebContent/1.selector/09_arrayHandling.html
+++ b/jquery/WebContent/1.selector/09_arrayHandling.html
@@ -24,10 +24,22 @@
 	$(function(){
 		
 		var memberNameArray=['kim','sim','kang','king','hong'];
-	
+		memberNameArray.sort();
+		//memberNameArray.reverse();
+		memberNameArray.sort(function(name1,name2){
+			if(name1<name2){
+				return 1;
+			} else{
+				return -1;
+			}
+		});
 		
 		var memberScoreArray=[89,45,23,98,12];
-	
+		memberScoreArray.sort();
+		//memberScoreArray.reverse();
+		memberScoreArray.sort(function(score1,score2){
+			return score2-score1;
+		});
 		
 		var memberArray=[
 				{'id':'guard1','name':'kim1','address':'경기도'},
@@ -36,12 +48,20 @@
 				{'id':'guard4','name':'kim4','address':'경기파'},
 				{'id':'guard5','name':'kim5','address':'경기솔'}
 		];
-		
-		
-		
+		memberArray.sort(function(member1,member2){
+			if(member1.id<member2.id){
+				return 1;
+			}else{
+				return -1;
+			}
+		});	//() 안은 sort의 compare function
 		
 		/*************정렬결과출력**************/
-		
+		$('.sorted1').html(memberNameArray.join('-->'));
+		$('.sorted2').html(memberScoreArray.join('-->'));
+		$.each(memberArray,function(i,member){
+			$('.sorted3').append(`${member.id}/${member.name}/${member.address}<br>`)
+		});
 	});
 	
 	
