--- a/jquery/WebContent/01.StartjQuery.html
+++ b/jquery/WebContent/01.StartjQuery.html
@@ -24,7 +24,7 @@
 	 	CSS선택자표현을 포함할수있다.
 	 	<<< jQuery factory function에 들어갈수있는인자>>>
 	 		1 . $('#id')   		:css selector문자열
-	 		2 . $(document)		:표준객체
+	 		2 . $(document),$(document.joinFoem),$(Element)		:표준객체(Element)
 	 		3 . $(function(){})	:함수
 	 		4 . $('<div></div>')-->태그문자열
 	 		    div element jQuery wrapper객체생성
