--- a/jquery/WebContent/1.selector/04_cssSelector.html
+++ b/jquery/WebContent/1.selector/04_cssSelector.html
@@ -18,8 +18,11 @@ div, span {
 <script type="text/javascript">
 	$(function(){
 		/***********직계자식 > **********/
-		
+		$('body > div').css('border','7px solid gold');
+		$('body > span').css('border','4px solid red');
 		/***********자손모두  **********/
+		$('body  div').css('background','pink');
+		$('body  span').css('background','orange');
 	
 		/*
 		$('body > *').css();
